--- a/lab-configs/routers/FRR/grpX-rtr.cfg
+++ b/lab-configs/routers/FRR/grpX-rtr.cfg
@@ -1,9 +1,10 @@
 frr defaults traditional
-hostname grp1-rtr
+hostname grp2-rtr
 rpki
-  rpki polling_period 300
-  rpki cache 100.100.1.70 323 preference 1
-  exit
+ rpki polling_period 300
+ rpki cache 100.64.0.70 323 preference 1
+ rpki cache 100.64.0.71 323 preference 2
+ exit
 service integrated-vtysh-config
 !
 ip route 0.0.0.0/0 100.64.0.1
@@ -11,31 +12,31 @@ ipv6 route ::/0 fd4a:7fe0::1
 !
 interface eth0
  description "class backbone"
- ip address 100.64.1.1/22
- ipv6 address fd4a:7fe0:0:1::1/48
+ ip address 100.64.1.2/22
+ ipv6 address fd4a:7fe0:0:1::2/48
 !
 interface eth1
  description "lan"
- ip address 100.100.1.1/26
- ipv6 address fd4a:7fe0:1::1/64
+ ip address 100.100.2.1/26
+ ipv6 address fd4a:7fe0:2::1/64
 !
 interface eth2
  description "int"
- ip address 100.100.1.65/26
- ipv6 address fd4a:7fe0:1:64::1/64
+ ip address 100.100.2.65/26
+ ipv6 address fd4a:7fe0:2:64::1/64
 !
 interface eth3
  description "dmz"
- ip address 100.100.1.129/26
- ipv6 address fd4a:7fe0:1:128::1/64
+ ip address 100.100.2.129/26
+ ipv6 address fd4a:7fe0:2:128::1/64
 !
 interface eth4
  description "extra"
- ip address 100.100.1.193/26
- ipv6 address fd4a:7fe0:1:192::1/64
+ ip address 100.100.2.193/26
+ ipv6 address fd4a:7fe0:2:192::1/64
 !
-router bgp 65001
- bgp router-id 100.64.1.1
+router bgp 65002
+ bgp router-id 100.64.1.2
  bgp log-neighbor-changes
  no bgp default ipv4-unicast
  neighbor 100.64.0.10 remote-as 65000
@@ -63,11 +64,6 @@ ip prefix-list PERMIT-ALL-IPv4 seq 5 permit any
 ipv6 prefix-list DENY-ALL-IPv6 seq 5 deny any
 ipv6 prefix-list PERMIT-ALL-IPv6 seq 5 permit any
 !
-bgp as-path access-list AS-PATH-PERMIT-LIST seq 10 permit _28000_
-!
-route-map NADA-IPv4 permit 10
- match ip address prefix-list DENY-ALL-IPv4
-!
 route-map PERMIT-SOME-ASN permit 10
  match as-path AS-PATH-PERMIT-LIST
 !
@@ -80,6 +76,9 @@ route-map TODO-IPv4 permit 10
 route-map TODO-IPv6 permit 10
  match ipv6 address prefix-list PERMIT-ALL-IPv6
 !
+route-map NADA-IPv4 permit 10
+ match ipv6 address prefix-list DENY-ALL-IPv4
+!
 route-map RPKI permit 10
  match rpki valid
  set local-preference 200
@@ -89,3 +88,4 @@ route-map RPKI permit 20
  set local-preference 100
 !
 line vty
+!
