--- a/lab-configs/routers/FRR/iborder-rtr.cfg
+++ b/lab-configs/routers/FRR/iborder-rtr.cfg
@@ -1,4 +1,3 @@
-frr version 8.0.1
 frr defaults traditional
 hostname iborder-rtr
 service integrated-vtysh-config
@@ -82,6 +81,7 @@ ipv6 prefix-list PERMIT-ALL-IPv6 seq 5 permit any
 bgp as-path access-list AS-PATH-PERMIT-LIST seq 10 permit _28000_
 bgp as-path access-list AS-PATH-PERMIT-LIST seq 20 permit _28001_
 bgp as-path access-list AS-PATH-PERMIT-LIST seq 30 permit _12654_
+bgp as-path access-list AS-PATH-PERMIT-LIST seq 40 permit _196615_
 !
 route-map NADA-IPv4 permit 10
  match ip address prefix-list DENY-ALL-IPv4
