--- a/lab-configs/routers/FRR/grpX-rtr-bad.cfg
+++ b/lab-configs/routers/FRR/grpX-rtr-bad.cfg
@@ -1,5 +1,5 @@
 frr defaults traditional
-hostname grp1-rtr
+hostname grp2-rtr
 rpki
  rpki polling_period 300
  rpki cache 100.64.0.70 323 preference 1
@@ -12,31 +12,34 @@ ipv6 route ::/0 fd4a:7fe0::1
 !
 interface eth0
  description "class backbone"
- ip address 100.64.1.1/22
- ipv6 address fd4a:7fe0:0:1::1/48
+ ip address 100.64.1.2/22
+ ipv6 address fd4a:7fe0:0:1::2/48
 !
 interface eth1
  description "lan"
- ip address 100.100.1.1/26
- ipv6 address fd4a:7fe0:1::1/64
+ ip address 100.100.2.1/26
+ ipv6 address fd4a:7fe0:2::1/64
 !
 interface eth2
  description "int"
- ip address 100.100.1.65/26
- ipv6 address fd4a:7fe0:1:64::1/64
+ ip address 100.100.2.65/26
+ ipv6 address fd4a:7fe0:2:64::1/64
 !
 interface eth3
  description "dmz"
- ip address 100.100.1.129/26
- ipv6 address fd4a:7fe0:1:128::1/64
+ ip address 100.100.2.129/26
+ ipv6 address fd4a:7fe0:2:128::1/64
 !
 interface eth4
  description "extra"
- ip address 100.100.1.193/26
- ipv6 address fd4a:7fe0:1:192::1/64
+ ip address 100.100.2.193/26
+ ipv6 address fd4a:7fe0:2:192::1/64
 !
-router bgp 65001
- bgp router-id 100.64.1.1
+interface lo
+ ipv6 address 2001:7fb:fd02::1/64
+!
+router bgp 65002
+ bgp router-id 100.64.1.2
  bgp log-neighbor-changes
  no bgp default ipv4-unicast
  neighbor 100.64.0.10 remote-as 65000
@@ -49,12 +52,14 @@ router bgp 65001
   neighbor 100.64.0.10 soft-reconfiguration inbound
   neighbor 100.64.0.10 route-map TODO-IPv4 in
   neighbor 100.64.0.10 route-map TODO-IPv4 out
+  neighbor fd4a:7fe0::10 route-map TODO-IPv6 in
  exit-address-family
  !
  address-family ipv6 unicast
+  network 2001:7fb:fd02::/64
   neighbor fd4a:7fe0::10 activate
   neighbor fd4a:7fe0::10 soft-reconfiguration inbound
-  neighbor fd4a:7fe0::10 route-map RPKI in
+  neighbor fd4a:7fe0::10 route-map TODO-IPv6 in
   neighbor fd4a:7fe0::10 route-map TODO-IPv6 out
  exit-address-family
 !
