--- a/lab-configs/routers/FRR/iborder-rtr.cfg
+++ b/lab-configs/routers/FRR/iborder-rtr.cfg
@@ -1,5 +1,10 @@
 frr defaults traditional
 hostname iborder-rtr
+rpki
+ rpki polling_period 300
+ rpki cache 100.64.0.70 323 preference 1
+ rpki cache 100.64.0.71 323 preference 2
+ exit
 service integrated-vtysh-config
 !
 ip route 0.0.0.0/0 100.64.0.1
@@ -98,5 +103,14 @@ route-map TODO-IPv4 permit 10
 route-map TODO-IPv6 permit 10
  match ipv6 address prefix-list PERMIT-ALL-IPv6
 !
+route-map RPKI permit 10
+ match rpki valid
+ set local-preference 200
+!
+route-map RPKI permit 20
+ match rpki notfound
+ set local-preference 100
+!
 line vty
 !
+end
