--- a/lab-configs/routers/FRR/iborder-rtr.cfg
+++ b/lab-configs/routers/FRR/iborder-rtr.cfg
@@ -1,24 +1,21 @@
+frr version 8.2.2
 frr defaults traditional
 hostname iborder-rtr
-rpki
- rpki polling_period 300
- rpki cache 100.64.0.70 323 preference 1
- rpki cache 100.64.0.71 323 preference 2
- exit
 service integrated-vtysh-config
 !
 ip route 0.0.0.0/0 100.64.0.1
-ip route 181.199.160.1/32 Null0
-ipv6 route ::/0 fd4a:7fe0::1
+ipv6 route ::/0 fd98:21e2::1
 !
 interface eth0
  description "class backbone"
  ip address 100.64.0.10/22
- ipv6 address fd4a:7fe0::10/48
+ ipv6 address fd98:21e2::10/48
+exit
 !
 interface wg0
- description "tunel contra el ISP (Ariel Weher)"
- ip address 198.18.0.2/29
+ description "ISP LACNOG"
+ ip address 172.30.0.2/29
+exit
 !
 router bgp 65000
  bgp router-id 100.64.0.10
@@ -30,14 +27,22 @@ router bgp 65000
  neighbor 100.64.1.2 description grp2-rtr
  neighbor 100.64.1.3 remote-as 65003
  neighbor 100.64.1.3 description grp3-rtr
- neighbor 198.18.0.1 remote-as 64512
- neighbor 198.18.0.1 description ISP (Ariel Weher)
- neighbor fd4a:7fe0:0:1::1 remote-as 65001
- neighbor fd4a:7fe0:0:1::1 description grp1-rtr
- neighbor fd4a:7fe0:0:1::2 remote-as 65002
- neighbor fd4a:7fe0:0:1::2 description grp2-rtr
- neighbor fd4a:7fe0:0:1::3 remote-as 65003
- neighbor fd4a:7fe0:0:1::3 description grp3-rtr
+ neighbor 100.64.1.4 remote-as 65004
+ neighbor 100.64.1.4 description grp4-rtr
+ neighbor 100.64.1.5 remote-as 65005
+ neighbor 100.64.1.5 description grp5-rtr
+ neighbor 172.30.0.1 remote-as 64135
+ neighbor 172.30.0.1 description iborder-rtr.kirk.lacnog.lat
+ neighbor fd98:21e2:0:1::1 remote-as 65001
+ neighbor fd98:21e2:0:1::1 description grp1-rtr
+ neighbor fd98:21e2:0:1::2 remote-as 65002
+ neighbor fd98:21e2:0:1::2 description grp2-rtr
+ neighbor fd98:21e2:0:1::3 remote-as 65003
+ neighbor fd98:21e2:0:1::3 description grp3-rtr
+ neighbor fd98:21e2:0:1::4 remote-as 65004
+ neighbor fd98:21e2:0:1::4 description grp4-rtr
+ neighbor fd98:21e2:0:1::5 remote-as 65005
+ neighbor fd98:21e2:0:1::5 description grp5-rtr
  !
  address-family ipv4 unicast
   neighbor 100.64.1.1 activate
@@ -52,30 +57,47 @@ router bgp 65000
   neighbor 100.64.1.3 soft-reconfiguration inbound
   neighbor 100.64.1.3 route-map TODO-IPv4 in
   neighbor 100.64.1.3 route-map TODO-IPv4 out
-  neighbor 198.18.0.1 activate
-  neighbor 198.18.0.1 soft-reconfiguration inbound
-  neighbor 198.18.0.1 route-map PERMIT-SOME-ASN in
-  neighbor 198.18.0.1 route-map NADA-IPv4 out
+  neighbor 100.64.1.4 activate
+  neighbor 100.64.1.4 soft-reconfiguration inbound
+  neighbor 100.64.1.4 route-map TODO-IPv4 in
+  neighbor 100.64.1.4 route-map TODO-IPv4 out
+  neighbor 100.64.1.5 activate
+  neighbor 100.64.1.5 soft-reconfiguration inbound
+  neighbor 100.64.1.5 route-map TODO-IPv4 in
+  neighbor 100.64.1.5 route-map TODO-IPv4 out
+  neighbor 172.30.0.1 activate
+  neighbor 172.30.0.1 soft-reconfiguration inbound
+  neighbor 172.30.0.1 route-map PERMIT-SOME-ASN in
+  neighbor 172.30.0.1 route-map NADA-IPv4 out
  exit-address-family
  !
  address-family ipv6 unicast
-  neighbor 198.18.0.1 activate
-  neighbor 198.18.0.1 soft-reconfiguration inbound
-  neighbor 198.18.0.1 route-map PERMIT-SOME-ASN in
-  neighbor 198.18.0.1 route-map NADA-IPv6 out
-  neighbor fd4a:7fe0:0:1::1 activate
-  neighbor fd4a:7fe0:0:1::1 soft-reconfiguration inbound
-  neighbor fd4a:7fe0:0:1::1 route-map TODO-IPv6 in
-  neighbor fd4a:7fe0:0:1::1 route-map TODO-IPv6 out
-  neighbor fd4a:7fe0:0:1::2 activate
-  neighbor fd4a:7fe0:0:1::2 soft-reconfiguration inbound
-  neighbor fd4a:7fe0:0:1::2 route-map TODO-IPv6 in
-  neighbor fd4a:7fe0:0:1::2 route-map TODO-IPv6 out
-  neighbor fd4a:7fe0:0:1::3 activate
-  neighbor fd4a:7fe0:0:1::3 soft-reconfiguration inbound
-  neighbor fd4a:7fe0:0:1::3 route-map TODO-IPv6 in
-  neighbor fd4a:7fe0:0:1::3 route-map TODO-IPv6 out
+  neighbor 172.30.0.1 activate
+  neighbor 172.30.0.1 soft-reconfiguration inbound
+  neighbor 172.30.0.1 route-map PERMIT-SOME-ASN in
+  neighbor 172.30.0.1 route-map NADA-IPv4 out
+  neighbor fd98:21e2:0:1::1 activate
+  neighbor fd98:21e2:0:1::1 soft-reconfiguration inbound
+  neighbor fd98:21e2:0:1::1 route-map TODO-IPv6 in
+  neighbor fd98:21e2:0:1::1 route-map TODO-IPv6 out
+  neighbor fd98:21e2:0:1::2 activate
+  neighbor fd98:21e2:0:1::2 soft-reconfiguration inbound
+  neighbor fd98:21e2:0:1::2 route-map TODO-IPv6 in
+  neighbor fd98:21e2:0:1::2 route-map TODO-IPv6 out
+  neighbor fd98:21e2:0:1::3 activate
+  neighbor fd98:21e2:0:1::3 soft-reconfiguration inbound
+  neighbor fd98:21e2:0:1::3 route-map TODO-IPv6 in
+  neighbor fd98:21e2:0:1::3 route-map TODO-IPv6 out
+  neighbor fd98:21e2:0:1::4 activate
+  neighbor fd98:21e2:0:1::4 soft-reconfiguration inbound
+  neighbor fd98:21e2:0:1::4 route-map TODO-IPv6 in
+  neighbor fd98:21e2:0:1::4 route-map TODO-IPv6 out
+  neighbor fd98:21e2:0:1::5 activate
+  neighbor fd98:21e2:0:1::5 soft-reconfiguration inbound
+  neighbor fd98:21e2:0:1::5 route-map TODO-IPv6 in
+  neighbor fd98:21e2:0:1::5 route-map TODO-IPv6 out
  exit-address-family
+exit
 !
 ip prefix-list DENY-ALL-IPv4 seq 5 deny any
 ip prefix-list PERMIT-ALL-IPv4 seq 5 permit any
@@ -87,30 +109,43 @@ bgp as-path access-list AS-PATH-PERMIT-LIST seq 10 permit _28000_
 bgp as-path access-list AS-PATH-PERMIT-LIST seq 20 permit _28001_
 bgp as-path access-list AS-PATH-PERMIT-LIST seq 30 permit _12654_
 bgp as-path access-list AS-PATH-PERMIT-LIST seq 40 permit _196615_
+bgp as-path access-list AS-PATH-PERMIT-LIST seq 50 permit _64135_
+bgp as-path access-list AS-PATH-PERMIT-LIST seq 60 permit _64136_
 !
 route-map NADA-IPv4 permit 10
  match ip address prefix-list DENY-ALL-IPv4
+exit
 !
 route-map PERMIT-SOME-ASN permit 10
  match as-path AS-PATH-PERMIT-LIST
+exit
 !
 route-map NADA-IPv6 permit 10
  match ipv6 address prefix-list DENY-ALL-IPv6
+exit
 !
 route-map TODO-IPv4 permit 10
  match ip address prefix-list PERMIT-ALL-IPv4
+exit
 !
 route-map TODO-IPv6 permit 10
  match ipv6 address prefix-list PERMIT-ALL-IPv6
+exit
 !
 route-map RPKI permit 10
  match rpki valid
  set local-preference 200
+exit
 !
 route-map RPKI permit 20
  match rpki notfound
  set local-preference 100
+exit
 !
-line vty
+rpki
+ rpki polling_period 300
+ rpki cache 100.64.0.70 323 preference 1
+ rpki cache 100.64.0.71 323 preference 2
+exit
 !
 end
