Updating Ansible+BGPq4 Lab

--- a/lab-configs/routers/FRR/grp2-rtr--group ASN.cfg
+++ b/lab-configs/routers/FRR/grp2-rtr--group ASN.cfg
@@ -1,67 +1,62 @@
+frr version 8.2.2
 frr defaults traditional
 hostname grp2-rtr
-rpki
- rpki polling_period 300
- rpki cache 100.64.0.70 323 preference 1
- rpki cache 100.64.0.71 323 preference 2
- exit
 service integrated-vtysh-config
 !
 ip route 0.0.0.0/0 100.64.0.1
-ipv6 route ::/0 fd4a:7fe0::1
+ipv6 route ::/0 fd34:daaf::1
 !
 interface eth0
  description "class backbone"
  ip address 100.64.1.2/22
- ipv6 address fd4a:7fe0:0:1::2/48
+ ipv6 address fd34:daaf:0:1::2/48
+exit
 !
 interface eth1
  description "lan"
  ip address 100.100.2.1/26
- ipv6 address fd4a:7fe0:2::1/64
+ ipv6 address fd34:daaf:2::1/64
+exit
 !
 interface eth2
  description "int"
  ip address 100.100.2.65/26
- ipv6 address fd4a:7fe0:2:64::1/64
+ ipv6 address fd34:daaf:2:64::1/64
+exit
 !
 interface eth3
  description "dmz"
  ip address 100.100.2.129/26
- ipv6 address fd4a:7fe0:2:128::1/64
+ ipv6 address fd34:daaf:2:128::1/64
+exit
 !
 interface eth4
  description "extra"
  ip address 100.100.2.193/26
- ipv6 address fd4a:7fe0:2:192::1/64
-!
-interface lo
- ipv6 address 2001:7fb:fd02::1/64
+ ipv6 address fd34:daaf:2:192::1/64
+exit
 !
 router bgp 65002
  bgp router-id 100.64.1.2
  bgp log-neighbor-changes
- no bgp default ipv4-unicast
  neighbor 100.64.0.10 remote-as 65000
  neighbor 100.64.0.10 description iborder-rtr
- neighbor fd4a:7fe0::10 remote-as 65000
- neighbor fd4a:7fe0::10 description iborder-rtr
+ neighbor fd34:daaf::10 remote-as 65000
+ neighbor fd34:daaf::10 description iborder-rtr
  !
  address-family ipv4 unicast
-  neighbor 100.64.0.10 activate
   neighbor 100.64.0.10 soft-reconfiguration inbound
   neighbor 100.64.0.10 route-map TODO-IPv4 in
-  neighbor 100.64.0.10 route-map TODO-IPv4 out
-  neighbor fd4a:7fe0::10 route-map TODO-IPv6 in
+  neighbor 100.64.0.10 route-map TODO-IPV4 out
  exit-address-family
  !
  address-family ipv6 unicast
-  network 2001:7fb:fd02::/64
-  neighbor fd4a:7fe0::10 activate
-  neighbor fd4a:7fe0::10 soft-reconfiguration inbound
-  neighbor fd4a:7fe0::10 route-map TODO-IPv6 in
-  neighbor fd4a:7fe0::10 route-map TODO-IPv6 out
+  neighbor fd34:daaf::10 activate
+  neighbor fd34:daaf::10 soft-reconfiguration inbound
+  neighbor fd34:daaf::10 route-map RPKI in
+  neighbor fd34:daaf::10 route-map TODO-IPv6 out
  exit-address-family
+exit
 !
 ip prefix-list DENY-ALL-IPv4 seq 5 deny any
 ip prefix-list PERMIT-ALL-IPv4 seq 5 permit any
@@ -69,29 +64,46 @@ ip prefix-list PERMIT-ALL-IPv4 seq 5 permit any
 ipv6 prefix-list DENY-ALL-IPv6 seq 5 deny any
 ipv6 prefix-list PERMIT-ALL-IPv6 seq 5 permit any
 !
-route-map PERMIT-SOME-ASN permit 10
- match as-path AS-PATH-PERMIT-LIST
-!
-route-map NADA-IPv6 permit 10
- match ipv6 address prefix-list DENY-ALL-IPv6
+bgp as-path access-list AS-PATH-PERMIT-LIST seq 5 permit ^65000(_65000)*$
+bgp as-path access-list AS-PATH-PERMIT-LIST seq 10 permit ^65000(_[0-9]+)*_(65001|65002|65003|65004)$
+bgp as-path access-list AS-PATH-PERMIT-LIST seq 15 permit ^65000(_[0-9]+)*_(65005)$
 !
 route-map TODO-IPv4 permit 10
  match ip address prefix-list PERMIT-ALL-IPv4
+exit
+!
+route-map NADA-IPv4 permit 10
+ match ip address prefix-list DENY-ALL-IPv4
+exit
+!
+route-map NADA-IPv6 permit 10
+ match ipv6 address prefix-list DENY-ALL-IPv6
+exit
 !
 route-map TODO-IPv6 permit 10
  match ipv6 address prefix-list PERMIT-ALL-IPv6
+exit
 !
-route-map NADA-IPv4 permit 10
- match ipv6 address prefix-list DENY-ALL-IPv4
+route-map PERMIT-SOME-ASN permit 10
+ match as-path AS-PATH-PERMIT-LIST
+exit
 !
 route-map RPKI permit 10
+ match as-path AS-PATH-PERMIT-LIST
  match rpki valid
  set local-preference 200
+exit
 !
 route-map RPKI permit 20
+ match as-path AS-PATH-PERMIT-LIST
  match rpki notfound
  set local-preference 100
+exit
 !
-line vty
+rpki
+ rpki polling_period 300
+ rpki cache 100.64.0.70 323 preference 1
+ rpki cache 100.64.0.71 323 preference 2
+exit
 !
 end
