--- a/lab-setup/ansible/vars_ios.yml
+++ b/lab-setup/ansible/vars_ios.yml
@@ -1,9 +1,8 @@
 ansible_connection: ansible.netcommon.network_cli
 ansible_network_os: cisco.ios.ios
 ansible_user: rtradm 
-ansible_password: 'PahbTfBjJYfswYHndM0='
-#ansible_user: frruser  
-#ansible_password: 'dalecampeon'
+ansible_password: 'xxxxxxxx'
+
 ansible_python_interpreter: '/usr/bin/python3'
 
 config_dir: ./ios_config
