--- a/lab-setup/ansible/ios/t3_route_maps_todo.yml
+++ b/lab-setup/ansible/ios/t3_route_maps_todo.yml
@@ -16,7 +16,7 @@
 #  match ipv6 address prefix-list DENY-ALL-IPv6
 # !
 
-  - name: Route Maps TODO-IPv4, NADA-IPv4, TODO-IPv6, NADA-IPv6
+  - name: T3 - Route Maps TODO-IPv4, NADA-IPv4, TODO-IPv6, NADA-IPv6
     cisco.ios.ios_route_maps:
       config:
         - route_map: TODO-IPv4 
@@ -81,7 +81,7 @@
 #  match rpki notfound
 #  set local-preference 100
 
-  - name: Route Maps RPKI
+  - name: T3 - Route Maps RPKI
     cisco.ios.ios_route_maps:
       config:
         - route_map: RPKI 
@@ -96,7 +96,7 @@
     tags: T3
 
     # Differences!!!!: Cisco: not_found | FRR: notfound
-  - name: Add match rpki notfound in Route Map AS-PATH
+  - name: T3 - Add match rpki notfound in Route Map AS-PATH
     cisco.ios.ios_config:
       lines:
       -  match rpki notfound 
@@ -106,7 +106,7 @@
     tags: T3
 
 
-  - name: save running to startup when modified
+  - name: T3 - Save running to startup when modified
     cisco.ios.ios_config:
       save_when: modified
       backup: yes
