--- a/lab-setup/ansible/ios/t6_bgp_as_path.yml
+++ b/lab-setup/ansible/ios/t6_bgp_as_path.yml
@@ -9,7 +9,7 @@
 # !
 
 
-  - name: IRR bgpq4
+  - name: T6 - IRR bgpq4
     shell: bgpq4 -h irr.lacnic.net -f {{ iborder_asn }}  -l AS-PATH-PERMIT-LIST {{ irr_as_set }}
     register: ip_as_path
     tags: T6
@@ -18,18 +18,18 @@
       msg: "{{ ip_as_path.stdout }}" 
     tags: T6
 
-  - name: Create a directory if it does not exist
+  - name: T6 - Create a directory if it does not exist
     file:
       path: ./template
       state: directory
       mode: '0755'
     tags: T6
 
-  - name: Create Jinja Template
+  - name: T6 - Create Jinja Template
     local_action: copy content="{{ ip_as_path.stdout | regex_replace('ip', 'bgp', ignorecase=True) }}" dest="./template/bgp_as_path.j2"
     tags: T6
 
-  - name: configurable backup path
+  - name: T6 - Configurable backup path
     cisco.ios.ios_config:
       src: template/bgp_as_path.j2
     tags: T6
@@ -39,7 +39,7 @@
 #  match as-path AS-PATH-PERMIT-LIST
 # !
 
-  - name: Route Map AS-PATH
+  - name: T6 - Route Map AS-PATH
     cisco.ios.ios_config:
       lines:
       - match as-path AS-PATH-PERMIT-LIST
@@ -47,7 +47,7 @@
       match: exact
     tags: T6
 
-  - name: Save running to startup when modified
+  - name: T6 - Save running to startup when modified
     cisco.ios.ios_config:
       save_when: modified
       backup: yes
