--- a/lab-setup/ansible/ios/t9_bgp_route_map_rpki.yml
+++ b/lab-setup/ansible/ios/t9_bgp_route_map_rpki.yml
@@ -11,7 +11,7 @@
 # exit
 # !
 
-  - name: Configuration of BGP IPv6 neighboor route-map RPKI for ASN "{{ my_asn }}"
+  - name: T9 - Configuration of BGP IPv6 neighboor route-map RPKI for ASN "{{ my_asn }}"
     cisco.ios.ios_bgp_address_family:
       config:
         as_number: "{{ my_asn }}"
@@ -29,7 +29,7 @@
                     out: true
     tags: T9
 
-  - name: save running to startup when modified
+  - name: T9 - Save running to startup when modified
     cisco.ios.ios_config:
       save_when: modified
       backup: yes
