Updating Lab IPv6 prefix

--- a/lab-configs/routers/FRR/old/iborder-rtr.cfg
+++ b/lab-configs/routers/FRR/old/iborder-rtr.cfg
@@ -4,12 +4,12 @@ hostname iborder-rtr
 service integrated-vtysh-config
 !
 ip route 0.0.0.0/0 100.64.0.1
-ipv6 route ::/0 fd98:21e2::1
+ipv6 route ::/0 fd23:2fe7::1
 !
 interface eth0
  description "class backbone"
  ip address 100.64.0.10/22
- ipv6 address fd98:21e2::10/48
+ ipv6 address fd23:2fe7::10/48
 exit
 !
 interface wg0
@@ -33,16 +33,16 @@ router bgp 65000
  neighbor 100.64.1.5 description grp5-rtr
  neighbor 172.30.0.1 remote-as 64135
  neighbor 172.30.0.1 description iborder-rtr.kirk.lacnog.lat
- neighbor fd98:21e2:0:1::1 remote-as 65001
- neighbor fd98:21e2:0:1::1 description grp1-rtr
- neighbor fd98:21e2:0:1::2 remote-as 65002
- neighbor fd98:21e2:0:1::2 description grp2-rtr
- neighbor fd98:21e2:0:1::3 remote-as 65003
- neighbor fd98:21e2:0:1::3 description grp3-rtr
- neighbor fd98:21e2:0:1::4 remote-as 65004
- neighbor fd98:21e2:0:1::4 description grp4-rtr
- neighbor fd98:21e2:0:1::5 remote-as 65005
- neighbor fd98:21e2:0:1::5 description grp5-rtr
+ neighbor fd23:2fe7:0:1::1 remote-as 65001
+ neighbor fd23:2fe7:0:1::1 description grp1-rtr
+ neighbor fd23:2fe7:0:1::2 remote-as 65002
+ neighbor fd23:2fe7:0:1::2 description grp2-rtr
+ neighbor fd23:2fe7:0:1::3 remote-as 65003
+ neighbor fd23:2fe7:0:1::3 description grp3-rtr
+ neighbor fd23:2fe7:0:1::4 remote-as 65004
+ neighbor fd23:2fe7:0:1::4 description grp4-rtr
+ neighbor fd23:2fe7:0:1::5 remote-as 65005
+ neighbor fd23:2fe7:0:1::5 description grp5-rtr
  !
  address-family ipv4 unicast
   neighbor 100.64.1.1 activate
@@ -76,26 +76,26 @@ router bgp 65000
   neighbor 172.30.0.1 soft-reconfiguration inbound
   neighbor 172.30.0.1 route-map PERMIT-SOME-ASN in
   neighbor 172.30.0.1 route-map NADA-IPv4 out
-  neighbor fd98:21e2:0:1::1 activate
-  neighbor fd98:21e2:0:1::1 soft-reconfiguration inbound
-  neighbor fd98:21e2:0:1::1 route-map TODO-IPv6 in
-  neighbor fd98:21e2:0:1::1 route-map TODO-IPv6 out
-  neighbor fd98:21e2:0:1::2 activate
-  neighbor fd98:21e2:0:1::2 soft-reconfiguration inbound
-  neighbor fd98:21e2:0:1::2 route-map TODO-IPv6 in
-  neighbor fd98:21e2:0:1::2 route-map TODO-IPv6 out
-  neighbor fd98:21e2:0:1::3 activate
-  neighbor fd98:21e2:0:1::3 soft-reconfiguration inbound
-  neighbor fd98:21e2:0:1::3 route-map TODO-IPv6 in
-  neighbor fd98:21e2:0:1::3 route-map TODO-IPv6 out
-  neighbor fd98:21e2:0:1::4 activate
-  neighbor fd98:21e2:0:1::4 soft-reconfiguration inbound
-  neighbor fd98:21e2:0:1::4 route-map TODO-IPv6 in
-  neighbor fd98:21e2:0:1::4 route-map TODO-IPv6 out
-  neighbor fd98:21e2:0:1::5 activate
-  neighbor fd98:21e2:0:1::5 soft-reconfiguration inbound
-  neighbor fd98:21e2:0:1::5 route-map TODO-IPv6 in
-  neighbor fd98:21e2:0:1::5 route-map TODO-IPv6 out
+  neighbor fd23:2fe7:0:1::1 activate
+  neighbor fd23:2fe7:0:1::1 soft-reconfiguration inbound
+  neighbor fd23:2fe7:0:1::1 route-map TODO-IPv6 in
+  neighbor fd23:2fe7:0:1::1 route-map TODO-IPv6 out
+  neighbor fd23:2fe7:0:1::2 activate
+  neighbor fd23:2fe7:0:1::2 soft-reconfiguration inbound
+  neighbor fd23:2fe7:0:1::2 route-map TODO-IPv6 in
+  neighbor fd23:2fe7:0:1::2 route-map TODO-IPv6 out
+  neighbor fd23:2fe7:0:1::3 activate
+  neighbor fd23:2fe7:0:1::3 soft-reconfiguration inbound
+  neighbor fd23:2fe7:0:1::3 route-map TODO-IPv6 in
+  neighbor fd23:2fe7:0:1::3 route-map TODO-IPv6 out
+  neighbor fd23:2fe7:0:1::4 activate
+  neighbor fd23:2fe7:0:1::4 soft-reconfiguration inbound
+  neighbor fd23:2fe7:0:1::4 route-map TODO-IPv6 in
+  neighbor fd23:2fe7:0:1::4 route-map TODO-IPv6 out
+  neighbor fd23:2fe7:0:1::5 activate
+  neighbor fd23:2fe7:0:1::5 soft-reconfiguration inbound
+  neighbor fd23:2fe7:0:1::5 route-map TODO-IPv6 in
+  neighbor fd23:2fe7:0:1::5 route-map TODO-IPv6 out
  exit-address-family
 exit
 !
