--- a/lab-setup/ansible/vars_ios.yml
+++ b/lab-setup/ansible/vars_ios.yml
@@ -12,7 +12,7 @@ my_router_id: "100.64.1.X"
 
 iborder_asn: "65000"
 iborder_ipv4: "100.64.0.10"
-iborder_ipv6: "fddd:8cf8::10"
+iborder_ipv6: "fd23:2fe7::10"
 iborder_desc: "iborder-rtr"
 
 rpki_cache_1: "100.64.0.70"
